--- a/css/utils.css
+++ b/css/utils.css
@@ -8,24 +8,34 @@
 	width: 100%;
 	margin: 0 auto;
 	padding: 0 10px;
+}
 
-	@media (min-width: 576px) {
+@media (min-width: 576px) {
+	.container {
 		max-width: 540px;
 	}
+}
 
-	@media (min-width: 768px) {
+@media (min-width: 768px) {
+	.container {
 		max-width: 720px;
 	}
+}
 
-	@media (min-width: 992px) {
+@media (min-width: 992px) {
+	.container {
 		max-width: 960px;
 	}
+}
 
-	@media (min-width: 1200px) {
+@media (min-width: 1200px) {
+	.container {
 		max-width: 1140px;
 	}
+}
 
-	@media (min-width: 1400px) {
+@media (min-width: 1400px) {
+	.container {
 		max-width: 1320px;
 	}
 }
