--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 .header {
-	padding: 20px 0;
+	padding: 20px;
 	display: flex;
 	justify-content: space-between;
 	position: sticky;
@@ -32,8 +32,8 @@
 	color: var(--color-secondary);
 }
 
-@media (min-width: 576px) {
+@media (min-width: 768px) {
 	.header {
-		padding: 30px 100px;
+		padding: 30px 0;
 	}
 }
