--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,10 @@ body {
 	background-color: var(--color-primary);
 }
 
+a {
+	color: inherit;
+}
+
 /* === */
 
 .header {
@@ -51,6 +55,7 @@ body {
 	letter-spacing: 1px;
 	transition: 0.15s;
 }
+
 .nav__link:hover {
 	color: var(--color-secondary);
 }
@@ -67,6 +72,7 @@ body {
 	max-width: 32rem;
 	line-height: 1.7;
 }
+
 .paragraph--centered {
 	text-align: center;
 }
@@ -78,6 +84,7 @@ body {
 	align-items: center;
 	flex-direction: column;
 }
+
 .section--full-width {
 	width: 100vw;
 	position: relative;
@@ -97,8 +104,24 @@ body {
 	aspect-ratio: 1;
 	object-fit: cover;
 }
+
 .showcase__image:nth-of-type(n + 5) {
 	display: none;
+}
+
+.footer {
+	padding: 5rem 0;
+	background-color: black;
+	color: var(--color-text-on-primary-muted);
+}
+
+.footer a {
+	text-decoration: none;
+}
+
+.footer__title {
+	margin-bottom: .7rem;
+	color: var(--color-text-on-secondary);
 }
 
 /* === */
@@ -107,6 +130,8 @@ body {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	flex-wrap: wrap;
+	gap: 20px;
 }
 
 .hidden {
