--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,18 @@
 }
 
 body {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	line-height: 1.5;
 	color: var(--color-text-on-primary);
 	background-color: var(--color-primary);
+}
+
+main {
+	flex-grow: 1;
 }
 
 a {
