--- a/css/styles.css
+++ b/css/styles.css
@@ -135,8 +135,7 @@ a {
 
 .stack {
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	flex-direction: column;
 	flex-wrap: wrap;
 	gap: 20px;
 }
@@ -174,6 +173,12 @@ a {
 
 	.header {
 		padding: 30px 0;
+	}
+
+	.stack {
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
 	}
 }
 
