--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,6 @@ a {
 	line-height: 1.7;
 	margin-bottom: 20px;
 }
-
 .paragraph--centered {
 	text-align: center;
 }
@@ -95,7 +94,6 @@ a {
 	align-items: center;
 	flex-direction: column;
 }
-
 .section--full-width {
 	width: 100vw;
 	position: relative;
@@ -103,6 +101,9 @@ a {
 	right: 50%;
 	margin-left: -50vw;
 	margin-right: -50vw;
+}
+.section--stats {
+	background-color: var(--color-secondary);
 }
 
 .showcase {
@@ -183,6 +184,37 @@ a {
 }
 .labelled-list__label::after {
 	content: ':';
+}
+
+.stats {
+	background-color: var(--color-secondary);
+	width: 100%;
+	height: 100%;
+	padding: 50px 0;
+	color: var(--color-text-on-secondary);
+}
+
+.stats__list {
+	display: flex;
+	justify-content: space-between;
+	gap: 100px;
+	width: fit-content;
+	margin: 0 auto;
+}
+
+.stats__item {
+	display: flex;
+	flex-direction: column;
+	gap: 6px;
+}
+
+.stats__number {
+	font-weight: bold;
+	font-size: 1.1rem;
+}
+
+.stats__label {
+	text-transform: uppercase;
 }
 
 /* === */
